--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@tsconfig/recommended": "^1.0.1",
         "@types/columnify": "^1.5.0",
+        "@types/luxon": "^1.25.1",
         "@types/moment": "^2.13.0",
         "@types/moment-timezone": "^0.5.30",
         "@types/node": "^14.14.20",
@@ -33,6 +34,7 @@
         "discord.js": "^12.5.1",
         "firebase": "^8.2.2",
         "firebase-admin": "^9.4.2",
+        "luxon": "^1.25.0",
         "moment": "^2.29.1",
         "moment-timezone": "^0.5.32"
     }
