--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "start": "node build/index.js"
     },
     "dependencies": {
+        "@discordjs/rest": "^0.3.0",
         "@qntnt/ts-utils": "^1.0.0",
         "@tsconfig/recommended": "^1.0.1",
         "@types/columnify": "^1.5.0",
@@ -37,6 +38,7 @@
         "@types/node": "^14.14.20",
         "columnify": "^1.5.4",
         "csv": "^5.3.2",
+        "discord-api-types": "^0.26.1",
         "discord.js": "^13.2.0",
         "firebase": "^8.2.2",
         "firebase-admin": "^9.4.2",
