Update help command and handle migration from old models

--- a/projects/idl/buf.gen.yaml
+++ b/projects/idl/buf.gen.yaml
@@ -8,4 +8,4 @@ plugins:
       - esModuleInterop=true
       - oneof=unions
       # - forceLong=long
-      - useDate=false
+      # - useDate=false
