--- a/projects/discord-bot/package.json
+++ b/projects/discord-bot/package.json
@@ -15,7 +15,7 @@
         "eslint": "^7.17.0",
         "jest": "^26.6.3",
         "ts-jest": "^26.4.4",
-        "ts-node-dev": "^1.1.1",
+        "ts-node-dev": "^1.1.8",
         "typescript": "^4.4.3"
     },
     "scripts": {
@@ -42,11 +42,11 @@
         "discord.js": "^13.2.0",
         "firebase": "^8.2.2",
         "firebase-admin": "^9.4.2",
+        "idl": "link:../../packages/idl-ts",
         "luxon": "^1.25.0",
         "moment": "^2.29.1",
         "moment-timezone": "^0.5.32",
         "random": "^3.0.6",
-        "seedrandom": "^3.0.5",
-        "idl": "link:../../packages/idl-ts"
+        "seedrandom": "^3.0.5"
     }
 }
